--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,11 @@
 .DS_Store
 .env.local
 .env.development.local
+
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea
