--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "firebase": "^4.13.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-firebase-file-uploader": "^2.4.1",
+    "react-modal": "^3.4.4",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
